# pbn

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  guide.md  pbn.cpp  pbn.sln  pbn.vcxproj  pbn.vcxproj.filters
.github/workflows/: workflows.yml
docs/: .gitignore  architecture_overview.md  docfx.json  index.md  toc.yml
docs/api/: index.md
pbn/: PbnApplication.cs  Program.cs  pbn.csproj
pbn-cli/: PbnApplication.cs  Program.cs  pbn-cli.csproj
pbn-lib/: pbn-lib.csproj
pbn-lib/Properties/: launchSettings.json
pbn-lib/src/: PbnError.cs  PbnFile.cs  PbnParser.cs
pbn-lib/src/dds/: DDSInterop.cs
pbn-lib/src/manipulators/: PbnBoardAnalyzer.cs  PbnBoardManipulator.cs  PbnInfoPrinter.cs
pbn-lib/src/manipulators/analysis/: AbilityBoardAnalyzer.cs  AnalysisSerializationType.cs  BaseBoardAnalyzer.cs  IBoardAnalyzer.cs  OptimumResultTableBoardAnalyzer.cs  PsBridgeBoardAnalyzer.cs  TagBasedBoardAnalyzer.cs
pbn-lib/src/model/: AnalysisTable.cs  Contract.cs  Vulnerability.cs
pbn-lib/src/serialization/: HtmlSerializer.cs  PbnSerializer.cs  PbnSerializerBase.cs
pbn-lib/src/tokens/: EmptyLine.cs  TableTag.cs  Tag.cs  TagFactory.cs  VersionEscapedLine.cs
pbn-lib/src/utils/: DebugUtils.cs  ListUtils.cs
pbn-test/: UnitTest1.cs  pbn-test.csproj
pbn/Properties/: launchSettings.json
pbn/src/: PbnApplication.cs  PbnError.cs  PbnFile.cs  PbnParser.cs  PbnSerializer.cs  PbnVersion.cs
pbn/src/analysis/: DDS.cs
pbn/src/dds/: DDSAnalysisService.cs  DDSInterop.cs  DDSTypes.cs
pbn/src/debug/: DebugUtils.cs
pbn/src/manipulators/: PbnBoardAnalyzer.cs  PbnInfoPrinter.cs  PbnStripper.cs
pbn/src/model/: AnalysisTable.cs  Board.cs  Contract.cs  NumericRange.cs  Position.cs  Suit.cs  Vulnerability.cs
pbn/src/pbn/: BoardNumber.cs  PbnFile.cs  PbnParser.cs  PbnSerializer.cs  PbnVersion.cs
pbn/src/program/: PbnApplication.cs
pbn/src/serialization/: ISerializer.cs  PbnSerializer.cs  PbnSerializerBase.cs
pbn/src/service/: AnalysisService.cs  DDSAnalysisService.cs  IAnalysisService.cs
pbn/src/tokens/: Commentary.cs  CustomEscapedLine.cs  EmptyLine.cs  EscapedLine.cs  ExportEscapedLine.cs  SemanticPbnToken.cs  TableTag.cs  Tag.cs  TagFactory.cs  Tags.cs  TextLine.cs  VersionEscapedLine.cs
pbn/src/tokens/tags/: ElementaryTags.cs
pbn/src/utils/: DebugUtils.cs  ListUtils.cs
pbn_files/: bigdeal.htm  bigdeal.pbn  large1.pbn  nocontractcanbemade.pbn  psbridge.pbn
tests/: DDSInteropTests.cs  DdsTests.cs  TokenManipulationTest.cs  tests.csproj
